syntax = "proto3";

package kv;

option go_package = "cs426.yale.edu/lab4/kv/proto";

message GetRequest {
	string key = 1;
}

message SetRequest {
	string key = 1;
	string value = 2;
	int64 ttl_ms = 3;
}

message DeleteRequest {
	string key = 1;
}

message MultiSetRequest {
	repeated string key = 1;
	repeated string value = 2;
	int64 ttl_ms = 3;
}

message GetResponse {
	string value = 1;
	bool was_found = 2;
}

message SetResponse {}
message DeleteResponse {}

message MultiSetResponse {
	repeated string failed_keys = 1;
}

message GetShardContentsRequest {
	int32 shard = 1;
}

message GetShardValue {
	string key = 1;
	string string_value = 2;
	repeated string list_value = 3;
	repeated string set_value = 4;
	repeated string sorted_set_value = 5;
	int64 string_ttl_ms_remaining = 6;
	int64 list_ttl_ms_remaining = 7;
	int64 set_ttl_ms_remaining = 8;
	int64 sorted_set_ttl_ms_remaining = 9;
}
message GetShardContentsResponse {
	repeated GetShardValue values = 1;
}

message CreateListRequest {
	string key = 1;
	int64 ttl_ms = 2;
}
message CreateSetRequest {
	string key = 1;
	int64 ttl_ms = 2;
}
message CreateSortedSetRequest {
	string key = 1;
	int64 ttl_ms = 2;
}
message CreateListResponse {}
message CreateSetResponse {}
message CreateSortedSetResponse {}

message AppendListRequest {
	string key = 1;
	string value = 2;
}
message AppendSetRequest {
	string key = 1;
	string value = 2;
}
message AppendSortedSetRequest {
	string key = 1;
	string value = 2;
	int64 rank = 3;
}
message AppendListResponse {}
message AppendSetResponse {}
message AppendSortedSetResponse {}

message GetRangeRequest {
	string key = 1;
	int64 start = 2;
	int64 end = 3;
}
message GetRangeResponse {
	repeated string values = 1;
}

message CASRequest {
	string key = 1;
	string value = 2;
	string expected = 3;
	int64 ttl_ms = 4;
}
message CASResponse {
	bool was_set = 1;
}

message RemoveListRequest {
	string key = 1;
	string value = 2;
}
message RemoveSetRequest {
	string key = 1;
	string value = 2;
}
message RemoveSortedSetRequest {
	string key = 1;
	string value = 2;
}
message PopListRequest {
	string key = 1;
}
message RemoveListResponse {
	bool status = 1;
}
message RemoveSetResponse {
	bool status = 1;
}
message RemoveSortedSetResponse {
	bool status = 1;
}
message PopListResponse {
	bool status = 1;
	string value = 2;
}

message CheckListRequest {
	string key = 1;
	string value = 2;
}
message CheckSetRequest {
	string key = 1;
	string value = 2;
}
message CheckSortedSetRequest {
	string key = 1;
	string value = 2;
}
message CheckListResponse {
	bool status = 1;
}
message CheckSetResponse {
	bool status = 1;
}
message CheckSortedSetResponse {
	bool status = 1;
}

message SetListRequest {
	string key = 1;
	repeated string value = 2;
	int64 ttl_ms = 3;
}

message SetListResponse {}

message SetSetRequest {
	string key = 1;
	repeated string value = 2;
	int64 ttl_ms = 3;
}

message SetSetResponse {}

message GetListRequest {
	string key = 1;
}

message GetListResponse {
	repeated string value = 1;
	bool was_found = 2;
}

message GetSetRequest {
	string key = 1;
}

message GetSetResponse {
	repeated string value = 1;
	bool was_found = 2;
}

service Kv {
	rpc Get(GetRequest) returns (GetResponse);
	rpc Set(SetRequest) returns (SetResponse);
	rpc Delete(DeleteRequest) returns (DeleteResponse);

	rpc CreateList(CreateListRequest) returns (CreateListResponse);
	rpc CreateSet(CreateSetRequest) returns (CreateSetResponse);
	rpc CreateSortedSet(CreateSortedSetRequest) returns (CreateSortedSetResponse);

	rpc AppendList(AppendListRequest) returns (AppendListResponse);
	rpc AppendSet(AppendSetRequest) returns (AppendSetResponse);
	rpc AppendSortedSet(AppendSortedSetRequest) returns (AppendSortedSetResponse);

	rpc PopList(PopListRequest) returns (PopListResponse);
	rpc RemoveList(RemoveListRequest) returns (RemoveListResponse);
	rpc RemoveSet(RemoveSetRequest) returns (RemoveSetResponse);
	rpc RemoveSortedSet(RemoveSortedSetRequest) returns (RemoveSortedSetResponse);

	rpc CheckList(CheckListRequest) returns (CheckListResponse);
	rpc CheckSet(CheckSetRequest) returns (CheckSetResponse);
	rpc CheckSortedSet(CheckSortedSetRequest) returns (CheckSortedSetResponse);

	rpc SetList(SetListRequest) returns (SetListResponse);
	rpc SetSet(SetSetRequest) returns (SetSetResponse);
	rpc GetList(GetListRequest) returns (GetListResponse);
	rpc GetSet(GetSetRequest) returns (GetSetResponse);

	rpc MultiSet(MultiSetRequest) returns (MultiSetResponse);
	rpc CAS(CASRequest) returns (CASResponse);

	rpc GetRange(GetRangeRequest) returns (GetRangeResponse);

	rpc GetShardContents(GetShardContentsRequest) returns (stream GetShardContentsResponse) {};
}
